modules/cli/src/test/resources/bad/syntax/consistentchoicesubj/Test07b.scr
module bad.syntax.consistentchoicesubj.Test07b;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			1() from A to C;
			4() from C to B;
			// OK if -nolocalchoicecheck, and morally OK (no recursion, cf. bad.syntax.consistentchoicesubj.Test07a)
		}
		or
		{
			2() from A to B;
			3() from B to C;
			5() from C to B;
		}
	}
}

